# ligature-scala

./: .editorconfig  .git-blame-ignore-revs  .gitignore  .scalafmt.conf  Cargo.toml  README.md  build.gradle.kts  build.sbt  old_build.sbt  settings.gradle.kts
.circleci/: config.yml
.github/workflows/: scala.yml
app/: build.gradle.kts
buildSrc/: build.gradle.kts
buildSrc/src/main/kotlin/: dev.ligature.kotlin-application-conventions.gradle.kts  dev.ligature.kotlin-common-conventions.gradle.kts  dev.ligature.kotlin-js-conventions.gradle.kts  dev.ligature.kotlin-library-conventions.gradle.kts  (+3 more)
gaze/: build.gradle.kts
gradle/: libs.versions.toml
idgen/: build.gradle.kts
lig/: build.gradle.kts
ligature/: build.gradle.kts
ligature-arcadedb/: README.md
ligature-http/: README.md  build.gradle.kts
ligature-http-in-memory/: build.gradle.kts
ligature-http-test-suite/: build.gradle.kts
ligature-http-xodus/: build.gradle.kts
ligature-in-memory/: README.md  build.gradle.kts
ligature-js/: build.gradle.kts
ligature-js/npm/: package.json
ligature-lab/: index.html
ligature-lmdb/: README.md
ligature-repl/: README.md  build.gradle.kts  run.bat
ligature-tauri/npm/: package.json
ligature-test-suite/: build.gradle.kts
ligature-xodus/: README.md  build.gradle.kts
ligature-zeromq/: README.md
list/: build.gradle.kts
project/: NpmSupport.scala  plugins.sbt
slonky/: build.gradle.kts
src/: lib.rs
utilities/: build.gradle.kts
wander/: build.gradle.kts  package.json
wander-grammar/: build.gradle.kts
wander-grammar/src/main/antlr/: Wander.g4
(+651 files in other folders)
