[package]
name = "slonky"
version = "0.1.0-SNAPSHOT"
authors = ["Alex Michael Berry <alexmiberry@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-core = "0.3.8"
async-trait = "0.1.42"
async-stream = "0.3.0"
